# sylph

./: .gitignore  README.md  mix.exs
apps/core/: mix.exs
apps/core/lib/core/: application.ex  nats_handler.ex  telemetry.ex  telemetry_utils.ex
apps/core/lib/core/cache/: monitor.ex  store.ex  supervisor.ex
apps/core/lib/core/chain/: block_range.ex  state.ex  supervisor.ex  syncer.ex
apps/core/lib/core/connection/: manager.ex
apps/core/lib/core/data_processor/: monitor.ex  state.ex  supervisor.ex  worker.ex  worker_pool.ex
apps/core/lib/core/grpc/: client.ex  client_manager.ex  connection_manager.ex  connection_registry.ex  ethereum_client.ex  supervisor.ex
apps/core/lib/core/infra/: supervisor.ex
apps/core/lib/core/schema/: chain_sync_status.ex  indexer_task.ex  (+1 more)
chains/ethereum/: go.mod  go.sum
chains/ethereum/cmd/: main.go
chains/ethereum/pkg/config/: config.go
chains/ethereum/pkg/pb/: ethereum.go
chains/ethereum/pkg/rpc/: client.go
chains/ethereum/pkg/service/: service.go  token.go
chains/ethereum/proto/ethereum/: service.pb.go  service_grpc.pb.go  types.pb.go
chains/ethereum/scripts/: generate_proto.sh
chains/solana/: Cargo.toml  build.rs
chains/solana/proto/: solana.rs
chains/solana/src/: main.rs
chains/solana/src/proto/: mod.rs
chains/solana/src/rpc/: client.rs  error.rs  mod.rs  types.rs
chains/solana/src/service/: mod.rs  parser.rs
config/: config.exs  dev.exs  prod.exs  test.exs
proto/: common.proto  ethereum.proto  solana.proto
proto/ethereum/: service.proto  types.proto
proto/solana/: service.proto  types.proto
(+29 files in other folders)
