[package]
name = "solana"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bincode = "1.3"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
bs58 = "0.5"
async-nats = "0.38"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "~2.1.13"
solana-sdk = "~2.1.13"
solana-transaction-status = "~2.1.13"
uuid = { version = "1.13", features = ["v4", "fast-rng", "macro-diagnostics"] }
lazy_static = "1.5"
spl-token = "7.0"


[build-dependencies]
tonic-build = "0.12"
